# NeuralNetworkCPP

./: LICENSE  README.md
Examples/BostonHousing/: BostonHousingExample.cpp  CMakeLists.txt
Examples/MNIST/: CMakeLists.txt  MNISTExample.cpp
Examples/XOR/: CMakeLists.txt  XorExample.cpp
Examples/Xor/: XorExample.cpp
NeuralNetworkCPP/: CMakeLists.txt  NeuralNetworkCPP.cpp  NeuralNetworkCPP.hpp
NeuralNetworkCPP/Activations/: Activations.hpp
NeuralNetworkCPP/Activations/Common/: Activation.hpp
NeuralNetworkCPP/Activations/ReLU/: ReLU.cpp  ReLU.hpp
NeuralNetworkCPP/Activations/Sigmoid/: Sigmoid.cpp  Sigmoid.hpp
NeuralNetworkCPP/Activations/Softmax/: Softmax.cpp  Softmax.hpp
NeuralNetworkCPP/DataPreprocessing/CSVReader/: CSVReader.cpp  CSVReader.hpp
NeuralNetworkCPP/DataPreprocessing/Scalers/: Scalers.hpp
NeuralNetworkCPP/DataPreprocessing/Scalers/Common/: Scaler.hpp
NeuralNetworkCPP/DataPreprocessing/Scalers/MinMaxScaler/: MinMaxScaler.cpp  MinMaxScaler.hpp
NeuralNetworkCPP/DataPreprocessing/Scalers/StandardScaler/: StandardScaler.cpp  StandardScaler.hpp
NeuralNetworkCPP/GlobalThreadPool/: GlobalThreadPool.cpp  GlobalThreadPool.hpp
NeuralNetworkCPP/GlobalThreadPool/Base/: ThreadPool.cpp  ThreadPool.hpp  ThreadPool.tpp
NeuralNetworkCPP/Initializers/: Initializers.hpp
NeuralNetworkCPP/Initializers/Common/: Initializer.hpp
NeuralNetworkCPP/Initializers/HeNormal/: HeNormal.cpp  HeNormal.hpp
NeuralNetworkCPP/Initializers/HeUniform/: HeUniform.cpp  HeUniform.hpp
NeuralNetworkCPP/Initializers/XavierNormal/: XavierNormal.cpp  XavierNormal.hpp
NeuralNetworkCPP/Initializers/XavierUniform/: XavierUniform.cpp  XavierUniform.hpp
NeuralNetworkCPP/Layers/: Layers.hpp
NeuralNetworkCPP/Layers/BatchNormalization/: BatchNormalization.cpp  BatchNormalization.hpp
NeuralNetworkCPP/Layers/Common/: Layer.hpp
NeuralNetworkCPP/Layers/DenseLayer/: DenseLayer.cpp  DenseLayer.hpp
NeuralNetworkCPP/Logger/: Logger.cpp  Logger.hpp
NeuralNetworkCPP/Losses/: Losses.hpp
NeuralNetworkCPP/Losses/BinaryCrossEntropy/: BinaryCrossEntropy.cpp  BinaryCrossEntropy.hpp
NeuralNetworkCPP/Losses/CategoricalCrossEntropy/: CategoricalCrossEntropy.cpp  CategoricalCrossEntropy.hpp
NeuralNetworkCPP/Losses/Common/: Loss.hpp
NeuralNetworkCPP/Losses/MeanSquaredError/: MeanSquaredError.cpp  MeanSquaredError.hpp
NeuralNetworkCPP/Matrix/: Matrix.cpp  Matrix.hpp
NeuralNetworkCPP/Matrix/ColWiseProxy/: ColWiseProxy.cpp  ColWiseProxy.hpp
NeuralNetworkCPP/Matrix/ColumnWiseProxy/: ColumnWiseProxy.cpp  ColumnWiseProxy.hpp
NeuralNetworkCPP/Matrix/RowWiseProxy/: RowWiseProxy.cpp  RowWiseProxy.hpp
NeuralNetworkCPP/Model/ModelEvaluator/: ModelEvaluator.cpp  ModelEvaluator.hpp
NeuralNetworkCPP/Model/ModelLayers/: ModelLayers.cpp  ModelLayers.hpp
NeuralNetworkCPP/ModelParts/ModelEvaluator/: ModelEvaluator.cpp  ModelEvaluator.hpp
NeuralNetworkCPP/ModelParts/ModelLayers/: ModelLayers.hpp
NeuralNetworkCPP/ModelParts/ModelTrainer/: ModelTrainer.cpp  ModelTrainer.hpp
NeuralNetworkCPP/Optimizers/: Optimizers.hpp
NeuralNetworkCPP/Optimizers/Adam/: Adam.cpp  Adam.hpp
NeuralNetworkCPP/Optimizers/Common/: Optimizer.hpp
NeuralNetworkCPP/Optimizers/RMSprop/: RMSprop.cpp  RMSprop.hpp
NeuralNetworkCPP/Optimizers/SGD/: SGD.cpp  SGD.hpp
NeuralNetworkCPP/ThreadPool/: ThreadPool.hpp  ThreadPool.tpp
NeuralNetworkCPP/Utils/: Utils.cpp  Utils.hpp
Tests/: CMakeLists.txt  tests.cpp
Tests/Activations/: TestActivations.cpp
Tests/Initializers/HeNormal/: TestHeNormal.cpp
Tests/Initializers/HeUniform/: TestHeUniform.cpp
Tests/Initializers/TestUtils/: TestUtils.hpp
Tests/Initializers/XavierNormal/: TestXavierNormal.cpp
Tests/Initializers/XavierUniform/: TestXavierUniform.cpp
Tests/Layers/: TestLayers.cpp
Tests/Losses/BCE/: TestBCE.cpp
Tests/Losses/CCE/: TestCCE.cpp
Tests/Losses/MSE/: TestMSE.cpp
Tests/Matrix/: TestMatrix.cpp
Tests/Model/: TestModel.cpp
Tests/Optimizers/: TestOptimizers.cpp
Tests/Preprocessing/: TestPreprocessing.cpp
Tests/TestUtils/: TestUtils.hpp
Tests/ThreadPool/: TestThreadPool.cpp
Tests/Utils/: TestUtils.cpp
docs/: index_classes.md  index_files.md  index_namespaces.md
docs/Classes/: classnn_1_1_activation.md  classnn_1_1_adam.md  classnn_1_1_batch_normalization.md  classnn_1_1_binary_cross_entropy.md  classnn_1_1_c_s_v_reader.md  classnn_1_1_categorical_cross_entropy.md  classnn_1_1_col_wise_proxy.md  classnn_1_1_dense_layer.md  classnn_1_1_he_normal.md  classnn_1_1_he_uniform.md  classnn_1_1_initializer.md  classnn_1_1_layer.md  classnn_1_1_logger.md  classnn_1_1_loss.md  classnn_1_1_matrix.md  classnn_1_1_mean_squared_error.md  classnn_1_1_min_max_scaler.md  classnn_1_1_model_evaluator.md  classnn_1_1_model_layers.md  classnn_1_1_model_trainer.md  classnn_1_1_neural_network_c_p_p.md  classnn_1_1_optimizer.md  classnn_1_1_r_m_sprop.md  classnn_1_1_re_l_u.md  classnn_1_1_row_wise_proxy.md  classnn_1_1_s_g_d.md  classnn_1_1_scaler.md  classnn_1_1_sigmoid.md  classnn_1_1_softmax.md  classnn_1_1_standard_scaler.md  classnn_1_1_thread_pool.md  classnn_1_1_xavier_normal.md  classnn_1_1_xavier_uniform.md
docs/Files/: _activation_8hpp.md  _activations_8hpp.md  _adam_8cpp.md  _adam_8hpp.md  _batch_normalization_8cpp.md  _batch_normalization_8hpp.md  _binary_cross_entropy_8cpp.md  _binary_cross_entropy_8hpp.md  _c_s_v_reader_8cpp.md  _c_s_v_reader_8hpp.md  _categorical_cross_entropy_8cpp.md  _categorical_cross_entropy_8hpp.md  _col_wise_proxy_8cpp.md  _col_wise_proxy_8hpp.md  _dense_layer_8cpp.md  _dense_layer_8hpp.md  _global_thread_pool_8cpp.md  _global_thread_pool_8hpp.md  _he_normal_8cpp.md  _he_normal_8hpp.md  _he_uniform_8cpp.md  _he_uniform_8hpp.md  _initializer_8hpp.md  _initializers_8hpp.md  _layer_8hpp.md  _layers_8hpp.md  _logger_8cpp.md  _logger_8hpp.md  _loss_8hpp.md  _losses_8hpp.md  _matrix_8cpp.md  _matrix_8hpp.md  _mean_squared_error_8cpp.md  _mean_squared_error_8hpp.md  _min_max_scaler_8cpp.md  _min_max_scaler_8hpp.md  _model_evaluator_8cpp.md  _model_evaluator_8hpp.md  _model_layers_8cpp.md  _model_layers_8hpp.md  (+72 more)
(+1 files in other folders)
